// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Configuration should render correctly 1`] = `
<form
  class="md-cell md-cell--8 md-cell--6-desktop"
  id="theme-configuration-form"
  name="theme-configuration"
>
  <h3
    class="md-title"
  >
    Theme Configuration
  </h3>
  <div
    class="md-selection-control-container"
  >
    <input
      aria-hidden="true"
      checked=""
      class="md-selection-control-input"
      id="light"
      name="theme-configuration"
      type="checkbox"
    />
    <label
      class="md-selection-control-label md-pointer--hover md-text"
      for="light"
    >
      <div
        aria-checked="true"
        aria-pressed="false"
        class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-selection-control-toggle md-btn md-btn--icon md-text--theme-secondary"
        role="checkbox"
        tabindex="0"
      >
        <div
          class="md-ink-container"
        >
          <span
            aria-hidden="true"
          />
        </div>
        <i
          class="md-icon material-icons md-text--inherit"
        >
          check_box
        </i>
      </div>
      <span>
        Light theme
      </span>
    </label>
  </div>
  <div
    class="md-selection-control-container"
  >
    <input
      aria-hidden="true"
      checked=""
      class="md-selection-control-input"
      id="save-theme"
      name="theme-configuration"
      type="checkbox"
    />
    <label
      class="md-selection-control-label md-pointer--hover md-text"
      for="save-theme"
    >
      <div
        aria-checked="true"
        aria-pressed="false"
        class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-selection-control-toggle md-btn md-btn--icon md-text--theme-secondary"
        role="checkbox"
        tabindex="0"
      >
        <div
          class="md-ink-container"
        >
          <span
            aria-hidden="true"
          />
        </div>
        <i
          class="md-icon material-icons md-text--inherit"
        >
          check_box
        </i>
      </div>
      <span>
        Save for future visits
      </span>
    </label>
  </div>
  <i
    class="md-text theme-configuration__message"
  >
    When the save for future visits checkbox is checked, cookies will be created to store your theme for later visits and other pages. If you do not check this checkbox, the default theme will be applied when you leave this page.
  </i>
  <div
    aria-expanded="false"
    aria-haspopup="true"
    class="md-layover md-inline-block md-menu-container md-menu--select-field md-cell"
    id="primary-menu"
  >
    <span
      aria-hidden="true"
    />
    <div
      class="md-select-field__toggle"
    >
      <label
        class="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized md-text--secondary"
        for="primary"
      >
        Primary color
      </label>
      <div
        aria-pressed="false"
        class="md-paper md-paper--0 md-fake-btn md-pointer--hover md-fake-btn--no-outline md-select-field"
        id="primary-toggle"
        role="listbox"
        tabindex="0"
      >
        <div
          class="md-icon-separator md-text-field md-text-field--floating-margin md-select-field--text-field"
        >
          <span
            class="md-icon-text"
          />
          <i
            class="md-icon material-icons"
          >
            arrow_drop_down
          </i>
        </div>
        <hr
          class="md-divider md-divider--text-field md-divider--expand-from-left md-divider--select-field"
        />
        <input
          id="primary"
          type="hidden"
          value="light-blue"
        />
      </div>
    </div>
  </div>
  <div
    aria-expanded="false"
    aria-haspopup="true"
    class="md-layover md-inline-block md-menu-container md-menu--select-field md-cell"
    id="secondary-menu"
  >
    <span
      aria-hidden="true"
    />
    <div
      class="md-select-field__toggle"
    >
      <label
        class="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized md-text--secondary"
        for="secondary"
      >
        Secondary color
      </label>
      <div
        aria-pressed="false"
        class="md-paper md-paper--0 md-fake-btn md-pointer--hover md-fake-btn--no-outline md-select-field"
        id="secondary-toggle"
        role="listbox"
        tabindex="0"
      >
        <div
          class="md-icon-separator md-text-field md-text-field--floating-margin md-select-field--text-field"
        >
          <span
            class="md-icon-text"
          />
          <i
            class="md-icon material-icons"
          >
            arrow_drop_down
          </i>
        </div>
        <hr
          class="md-divider md-divider--text-field md-divider--expand-from-left md-divider--select-field"
        />
        <input
          id="secondary"
          type="hidden"
          value="pink"
        />
      </div>
    </div>
  </div>
  <div
    aria-expanded="false"
    aria-haspopup="true"
    class="md-layover md-inline-block md-menu-container md-menu--select-field md-cell"
    id="hue-menu"
  >
    <span
      aria-hidden="true"
    />
    <div
      class="md-select-field__toggle"
    >
      <label
        class="md-floating-label md-floating-label--floating md-text--secondary"
        for="hue"
      >
        Secondary hue
      </label>
      <div
        aria-pressed="false"
        class="md-paper md-paper--0 md-fake-btn md-pointer--hover md-fake-btn--no-outline md-select-field md-text"
        id="hue-toggle"
        role="listbox"
        tabindex="0"
      >
        <div
          class="md-icon-separator md-text-field md-text-field--floating-margin md-select-field--text-field"
        >
          <span
            class="md-icon-text"
          >
            200
          </span>
          <i
            class="md-icon material-icons"
          >
            arrow_drop_down
          </i>
        </div>
        <hr
          class="md-divider md-divider--text-field md-divider--expand-from-left md-divider--select-field"
        />
        <input
          id="hue"
          type="hidden"
          value="200"
        />
      </div>
    </div>
  </div>
</form>
`;

exports[`Configuration should render correctly 2`] = `
<form
  class="md-cell md-cell--8 md-cell--6-desktop"
  id="theme-configuration-form"
  name="theme-configuration"
>
  <h3
    class="md-title"
  >
    Theme Configuration
  </h3>
  <div
    class="md-selection-control-container"
  >
    <input
      aria-hidden="true"
      checked=""
      class="md-selection-control-input"
      id="light"
      name="theme-configuration"
      type="checkbox"
    />
    <label
      class="md-selection-control-label md-pointer--hover md-text"
      for="light"
    >
      <div
        aria-checked="true"
        aria-pressed="false"
        class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-selection-control-toggle md-btn md-btn--icon md-text--theme-secondary"
        role="checkbox"
        tabindex="0"
      >
        <div
          class="md-ink-container"
        >
          <span
            aria-hidden="true"
          />
        </div>
        <i
          class="md-icon material-icons md-text--inherit"
        >
          check_box
        </i>
      </div>
      <span>
        Light theme
      </span>
    </label>
  </div>
  <div
    class="md-selection-control-container"
  >
    <input
      aria-hidden="true"
      class="md-selection-control-input"
      disabled=""
      id="save-theme"
      name="theme-configuration"
      type="checkbox"
    />
    <label
      class="md-selection-control-label md-text--disabled"
      for="save-theme"
    >
      <div
        aria-checked="false"
        aria-pressed="false"
        class="md-fake-btn md-fake-btn--no-outline md-selection-control-toggle md-btn md-btn--icon md-text--disabled"
        disabled=""
        role="checkbox"
      >
        <i
          class="md-icon material-icons md-text--inherit"
        >
          check_box_outline_blank
        </i>
      </div>
      <span>
        Save for future visits
      </span>
    </label>
  </div>
  <i
    class="md-text theme-configuration__message"
  >
    When the save for future visits checkbox is checked, cookies will be created to store your theme for later visits and other pages. If you do not check this checkbox, the default theme will be applied when you leave this page.
  </i>
  <div
    aria-expanded="false"
    aria-haspopup="true"
    class="md-layover md-inline-block md-menu-container md-menu--select-field md-cell"
    id="primary-menu"
  >
    <span
      aria-hidden="true"
    />
    <div
      class="md-select-field__toggle"
    >
      <label
        class="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized md-text--secondary"
        for="primary"
      >
        Primary color
      </label>
      <div
        aria-pressed="false"
        class="md-paper md-paper--0 md-fake-btn md-pointer--hover md-fake-btn--no-outline md-select-field"
        id="primary-toggle"
        role="listbox"
        tabindex="0"
      >
        <div
          class="md-icon-separator md-text-field md-text-field--floating-margin md-select-field--text-field"
        >
          <span
            class="md-icon-text"
          />
          <i
            class="md-icon material-icons"
          >
            arrow_drop_down
          </i>
        </div>
        <hr
          class="md-divider md-divider--text-field md-divider--expand-from-left md-divider--select-field"
        />
        <input
          id="primary"
          type="hidden"
          value="light-blue"
        />
      </div>
    </div>
  </div>
  <div
    aria-expanded="false"
    aria-haspopup="true"
    class="md-layover md-inline-block md-menu-container md-menu--select-field md-cell"
    id="secondary-menu"
  >
    <span
      aria-hidden="true"
    />
    <div
      class="md-select-field__toggle"
    >
      <label
        class="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized md-text--secondary"
        for="secondary"
      >
        Secondary color
      </label>
      <div
        aria-pressed="false"
        class="md-paper md-paper--0 md-fake-btn md-pointer--hover md-fake-btn--no-outline md-select-field"
        id="secondary-toggle"
        role="listbox"
        tabindex="0"
      >
        <div
          class="md-icon-separator md-text-field md-text-field--floating-margin md-select-field--text-field"
        >
          <span
            class="md-icon-text"
          />
          <i
            class="md-icon material-icons"
          >
            arrow_drop_down
          </i>
        </div>
        <hr
          class="md-divider md-divider--text-field md-divider--expand-from-left md-divider--select-field"
        />
        <input
          id="secondary"
          type="hidden"
          value="pink"
        />
      </div>
    </div>
  </div>
  <div
    aria-expanded="false"
    aria-haspopup="true"
    class="md-layover md-inline-block md-menu-container md-menu--select-field md-cell"
    id="hue-menu"
  >
    <span
      aria-hidden="true"
    />
    <div
      class="md-select-field__toggle"
    >
      <label
        class="md-floating-label md-floating-label--floating md-text--secondary"
        for="hue"
      >
        Secondary hue
      </label>
      <div
        aria-pressed="false"
        class="md-paper md-paper--0 md-fake-btn md-pointer--hover md-fake-btn--no-outline md-select-field md-text"
        id="hue-toggle"
        role="listbox"
        tabindex="0"
      >
        <div
          class="md-icon-separator md-text-field md-text-field--floating-margin md-select-field--text-field"
        >
          <span
            class="md-icon-text"
          >
            200
          </span>
          <i
            class="md-icon material-icons"
          >
            arrow_drop_down
          </i>
        </div>
        <hr
          class="md-divider md-divider--text-field md-divider--expand-from-left md-divider--select-field"
        />
        <input
          id="hue"
          type="hidden"
          value="200"
        />
      </div>
    </div>
  </div>
</form>
`;

exports[`Configuration should render correctly 3`] = `
<form
  class="md-cell md-cell--8 md-cell--6-desktop"
  id="theme-configuration-form"
  name="theme-configuration"
>
  <h3
    class="md-title"
  >
    Theme Configuration
  </h3>
  <div
    class="md-selection-control-container"
  >
    <input
      aria-hidden="true"
      class="md-selection-control-input"
      id="light"
      name="theme-configuration"
      type="checkbox"
    />
    <label
      class="md-selection-control-label md-pointer--hover md-text"
      for="light"
    >
      <div
        aria-checked="false"
        aria-pressed="false"
        class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-selection-control-toggle md-btn md-btn--icon md-text--secondary"
        role="checkbox"
        tabindex="0"
      >
        <div
          class="md-ink-container"
        >
          <span
            aria-hidden="true"
          />
        </div>
        <i
          class="md-icon material-icons md-text--inherit"
        >
          check_box_outline_blank
        </i>
      </div>
      <span>
        Light theme
      </span>
    </label>
  </div>
  <div
    class="md-selection-control-container"
  >
    <input
      aria-hidden="true"
      checked=""
      class="md-selection-control-input"
      id="save-theme"
      name="theme-configuration"
      type="checkbox"
    />
    <label
      class="md-selection-control-label md-pointer--hover md-text"
      for="save-theme"
    >
      <div
        aria-checked="true"
        aria-pressed="false"
        class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-selection-control-toggle md-btn md-btn--icon md-text--theme-secondary"
        role="checkbox"
        tabindex="0"
      >
        <div
          class="md-ink-container"
        >
          <span
            aria-hidden="true"
          />
        </div>
        <i
          class="md-icon material-icons md-text--inherit"
        >
          check_box
        </i>
      </div>
      <span>
        Save for future visits
      </span>
    </label>
  </div>
  <i
    class="md-text theme-configuration__message"
  >
    When the save for future visits checkbox is checked, cookies will be created to store your theme for later visits and other pages. If you do not check this checkbox, the default theme will be applied when you leave this page.
  </i>
  <div
    aria-expanded="false"
    aria-haspopup="true"
    class="md-layover md-inline-block md-menu-container md-menu--select-field md-cell"
    id="primary-menu"
  >
    <span
      aria-hidden="true"
    />
    <div
      class="md-select-field__toggle"
    >
      <label
        class="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized md-text--secondary"
        for="primary"
      >
        Primary color
      </label>
      <div
        aria-pressed="false"
        class="md-paper md-paper--0 md-fake-btn md-pointer--hover md-fake-btn--no-outline md-select-field"
        id="primary-toggle"
        role="listbox"
        tabindex="0"
      >
        <div
          class="md-icon-separator md-text-field md-text-field--floating-margin md-select-field--text-field"
        >
          <span
            class="md-icon-text"
          />
          <i
            class="md-icon material-icons"
          >
            arrow_drop_down
          </i>
        </div>
        <hr
          class="md-divider md-divider--text-field md-divider--expand-from-left md-divider--select-field"
        />
        <input
          id="primary"
          type="hidden"
          value="light-blue"
        />
      </div>
    </div>
  </div>
  <div
    aria-expanded="false"
    aria-haspopup="true"
    class="md-layover md-inline-block md-menu-container md-menu--select-field md-cell"
    id="secondary-menu"
  >
    <span
      aria-hidden="true"
    />
    <div
      class="md-select-field__toggle"
    >
      <label
        class="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized md-text--secondary"
        for="secondary"
      >
        Secondary color
      </label>
      <div
        aria-pressed="false"
        class="md-paper md-paper--0 md-fake-btn md-pointer--hover md-fake-btn--no-outline md-select-field"
        id="secondary-toggle"
        role="listbox"
        tabindex="0"
      >
        <div
          class="md-icon-separator md-text-field md-text-field--floating-margin md-select-field--text-field"
        >
          <span
            class="md-icon-text"
          />
          <i
            class="md-icon material-icons"
          >
            arrow_drop_down
          </i>
        </div>
        <hr
          class="md-divider md-divider--text-field md-divider--expand-from-left md-divider--select-field"
        />
        <input
          id="secondary"
          type="hidden"
          value="pink"
        />
      </div>
    </div>
  </div>
  <div
    aria-expanded="false"
    aria-haspopup="true"
    class="md-layover md-inline-block md-menu-container md-menu--select-field md-cell"
    id="hue-menu"
  >
    <span
      aria-hidden="true"
    />
    <div
      class="md-select-field__toggle"
    >
      <label
        class="md-floating-label md-floating-label--floating md-text--secondary"
        for="hue"
      >
        Secondary hue
      </label>
      <div
        aria-pressed="false"
        class="md-paper md-paper--0 md-fake-btn md-pointer--hover md-fake-btn--no-outline md-select-field md-text"
        id="hue-toggle"
        role="listbox"
        tabindex="0"
      >
        <div
          class="md-icon-separator md-text-field md-text-field--floating-margin md-select-field--text-field"
        >
          <span
            class="md-icon-text"
          >
            200
          </span>
          <i
            class="md-icon material-icons"
          >
            arrow_drop_down
          </i>
        </div>
        <hr
          class="md-divider md-divider--text-field md-divider--expand-from-left md-divider--select-field"
        />
        <input
          id="hue"
          type="hidden"
          value="200"
        />
      </div>
    </div>
  </div>
</form>
`;

exports[`Configuration should render correctly 4`] = `
<form
  class="md-cell md-cell--8 md-cell--6-desktop"
  id="theme-configuration-form"
  name="theme-configuration"
>
  <h3
    class="md-title"
  >
    Theme Configuration
  </h3>
  <div
    class="md-selection-control-container"
  >
    <input
      aria-hidden="true"
      class="md-selection-control-input"
      id="light"
      name="theme-configuration"
      type="checkbox"
    />
    <label
      class="md-selection-control-label md-pointer--hover md-text"
      for="light"
    >
      <div
        aria-checked="false"
        aria-pressed="false"
        class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-selection-control-toggle md-btn md-btn--icon md-text--secondary"
        role="checkbox"
        tabindex="0"
      >
        <div
          class="md-ink-container"
        >
          <span
            aria-hidden="true"
          />
        </div>
        <i
          class="md-icon material-icons md-text--inherit"
        >
          check_box_outline_blank
        </i>
      </div>
      <span>
        Light theme
      </span>
    </label>
  </div>
  <div
    class="md-selection-control-container"
  >
    <input
      aria-hidden="true"
      class="md-selection-control-input"
      id="save-theme"
      name="theme-configuration"
      type="checkbox"
    />
    <label
      class="md-selection-control-label md-pointer--hover md-text"
      for="save-theme"
    >
      <div
        aria-checked="false"
        aria-pressed="false"
        class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-selection-control-toggle md-btn md-btn--icon md-text--secondary"
        role="checkbox"
        tabindex="0"
      >
        <div
          class="md-ink-container"
        >
          <span
            aria-hidden="true"
          />
        </div>
        <i
          class="md-icon material-icons md-text--inherit"
        >
          check_box_outline_blank
        </i>
      </div>
      <span>
        Save for future visits
      </span>
    </label>
  </div>
  <i
    class="md-text theme-configuration__message"
  >
    When the save for future visits checkbox is checked, cookies will be created to store your theme for later visits and other pages. If you do not check this checkbox, the default theme will be applied when you leave this page.
  </i>
  <div
    aria-expanded="false"
    aria-haspopup="true"
    class="md-layover md-inline-block md-menu-container md-menu--select-field md-cell"
    id="primary-menu"
  >
    <span
      aria-hidden="true"
    />
    <div
      class="md-select-field__toggle"
    >
      <label
        class="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized md-text--secondary"
        for="primary"
      >
        Primary color
      </label>
      <div
        aria-pressed="false"
        class="md-paper md-paper--0 md-fake-btn md-pointer--hover md-fake-btn--no-outline md-select-field"
        id="primary-toggle"
        role="listbox"
        tabindex="0"
      >
        <div
          class="md-icon-separator md-text-field md-text-field--floating-margin md-select-field--text-field"
        >
          <span
            class="md-icon-text"
          />
          <i
            class="md-icon material-icons"
          >
            arrow_drop_down
          </i>
        </div>
        <hr
          class="md-divider md-divider--text-field md-divider--expand-from-left md-divider--select-field"
        />
        <input
          id="primary"
          type="hidden"
          value="light-blue"
        />
      </div>
    </div>
  </div>
  <div
    aria-expanded="false"
    aria-haspopup="true"
    class="md-layover md-inline-block md-menu-container md-menu--select-field md-cell"
    id="secondary-menu"
  >
    <span
      aria-hidden="true"
    />
    <div
      class="md-select-field__toggle"
    >
      <label
        class="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized md-text--secondary"
        for="secondary"
      >
        Secondary color
      </label>
      <div
        aria-pressed="false"
        class="md-paper md-paper--0 md-fake-btn md-pointer--hover md-fake-btn--no-outline md-select-field"
        id="secondary-toggle"
        role="listbox"
        tabindex="0"
      >
        <div
          class="md-icon-separator md-text-field md-text-field--floating-margin md-select-field--text-field"
        >
          <span
            class="md-icon-text"
          />
          <i
            class="md-icon material-icons"
          >
            arrow_drop_down
          </i>
        </div>
        <hr
          class="md-divider md-divider--text-field md-divider--expand-from-left md-divider--select-field"
        />
        <input
          id="secondary"
          type="hidden"
          value="pink"
        />
      </div>
    </div>
  </div>
  <div
    aria-expanded="false"
    aria-haspopup="true"
    class="md-layover md-inline-block md-menu-container md-menu--select-field md-cell"
    id="hue-menu"
  >
    <span
      aria-hidden="true"
    />
    <div
      class="md-select-field__toggle"
    >
      <label
        class="md-floating-label md-floating-label--floating md-text--secondary"
        for="hue"
      >
        Secondary hue
      </label>
      <div
        aria-pressed="false"
        class="md-paper md-paper--0 md-fake-btn md-pointer--hover md-fake-btn--no-outline md-select-field md-text"
        id="hue-toggle"
        role="listbox"
        tabindex="0"
      >
        <div
          class="md-icon-separator md-text-field md-text-field--floating-margin md-select-field--text-field"
        >
          <span
            class="md-icon-text"
          >
            200
          </span>
          <i
            class="md-icon material-icons"
          >
            arrow_drop_down
          </i>
        </div>
        <hr
          class="md-divider md-divider--text-field md-divider--expand-from-left md-divider--select-field"
        />
        <input
          id="hue"
          type="hidden"
          value="200"
        />
      </div>
    </div>
  </div>
</form>
`;
